--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,10 @@ services:
     restart: unless-stopped
     depends_on:
       - mongodb
+
+  nginx:
+    build:
+      context: ./nginx
+    restart: unless-stopped
+    depends_on:
+      - proxy
