--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -84,6 +84,43 @@ services:
         max_attempts: 5
         window: 120s
 
+  nginx:
+    container_name: maplelegends_vote_reminder-nginx
+    image: ghcr.io/gordonpn/maplelegends_vote_reminder-nginx:stable
+    networks:
+      - traefik-public
+      - maplelegends_vote_reminder
+    expose:
+      - 80
+    labels:
+      - "traefik.enable=true"
+    healthcheck:
+      test: curl --fail -s http://localhost:80/health || exit 1
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 1m30s
+    deploy:
+      replicas: 3
+      update_config:
+        parallelism: 1
+        order: stop-first
+        failure_action: rollback
+        delay: 10s
+      rollback_config:
+        parallelism: 0
+        order: stop-first
+      restart_policy:
+        condition: any
+        delay: 60s
+        max_attempts: 5
+        window: 120s
+      labels:
+        - "traefik.enable=true"
+        - "traefik.constraint-label=traefik-public"
+        - "traefik.http.services.maplelegends_vote_reminder.loadbalancer.server.port=80"
+        - "traefik.docker.network=traefik-public"
+
 networks:
   maplelegends_vote_reminder:
     driver: overlay
