--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,7 +7,7 @@ jobs:
   docker:
     strategy:
       matrix:
-        project: [discord-bot, proxy-server]
+        project: [discord-bot, proxy-server, nginx]
         branches: [main]
 
     runs-on: ubuntu-latest
