--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,25 +9,20 @@ jobs:
       matrix:
         project: [discord-bot, proxy-server, nginx]
         branches: [main]
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
         with:
           ref: ${{ matrix.branches }}
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
         with:
           platforms: all
-
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
         with:
           version: latest
-
       - name: Build Docker images and publish
         working-directory: ${{ matrix.project }}
         env:
@@ -46,3 +41,13 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           MATRIX_CONTEXT: ${{ toJson(matrix) }}
         if: always()
+  drone:
+    needs: docker
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify Drone CI
+        run: |
+          curl --request GET \
+          --url https://drone.gordon-pn.com/api/repos/${{ github.repository }}/builds \
+          --header 'authorization: Bearer ${{ secrets.DRONE_AUTH_BEARER_TOKEN }}' \
+          --fail
