--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,7 +47,7 @@ jobs:
     steps:
       - name: Notify Drone CI
         run: |
-          curl --request GET \
+          curl --request -X POST \
           --url https://drone.gordon-pn.com/api/repos/${{ github.repository }}/builds \
-          --header 'authorization: Bearer ${{ secrets.DRONE_AUTH_BEARER_TOKEN }}' \
+          --header 'Authorization: Bearer ${{ secrets.DRONE_AUTH_BEARER_TOKEN }}' \
           --fail
