--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,7 +30,7 @@ jobs:
           PROJECT: ${{ matrix.project }}
         run: |
           DOCKER_TAG="latest"
-          [ "$BRANCH" = "master" ] && DOCKER_TAG="stable"
+          [ "$BRANCH" = "main" ] && DOCKER_TAG="stable"
           echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
           docker buildx build -t ghcr.io/gordonpn/maplelegends_vote_reminder-"$PROJECT":"$DOCKER_TAG" --platform linux/amd64,linux/arm64 --push .
       - uses: 8398a7/action-slack@v3
@@ -51,3 +51,11 @@ jobs:
           --url https://drone.gordon-pn.com/api/repos/${{ github.repository }}/builds \
           --header 'Authorization: Bearer ${{ secrets.DRONE_AUTH_BEARER_TOKEN }}' \
           --fail
+      - uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,workflow,job,took
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          MATRIX_CONTEXT: ${{ toJson(matrix) }}
+        if: always()
