--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,8 @@ services:
   mongodb:
     container_name: maplelegends_vote_reminder-mongodb
     volumes:
-      - /mnt/glusterfs/docker/maplelegends_vote_reminder-mongodb:/data/db
+      - /mnt/glusterfs/docker/maplelegends_vote_reminder/mongodb:/data/db
+      - /mnt/glusterfs/docker/maplelegends_vote_reminder/workspace/docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     networks:
       - maplelegends_vote_reminder
     expose:
