ci: simplify bash commands

--- a/.drone.yml
+++ b/.drone.yml
@@ -54,7 +54,9 @@ name: clone workspace to host filesystem
 steps:
 - commands:
   - apk update && apk --no-cache add bash git && git --version && bash --version
-  - if cd /home; then git pull; else git clone "${DRONE_GIT_HTTP_URL}" /home; fi
+  - cd /home || exit 1
+  - '[ -d ".git" ] && git pull && exit 0'
+  - git clone "${DRONE_GIT_HTTP_URL}" /home
   environment:
     GIT_DISCOVERY_ACROSS_FILESYSTEM: 1
   image: alpine
