--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,7 @@ version: "3.8"
 services:
   mongodb:
     container_name: maplelegends_vote_reminder-mongodb
+    user: "gordonpn"
     volumes:
       - /mnt/share/docker/maplelegends_vote_reminder/mongodb:/data/db
       - /mnt/share/docker/maplelegends_vote_reminder/workspace/docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
