fix: set numerical uid/gid
Because user gordonpn does not exist inside container and i did not
create a custom mongo dockerfile yet.
For now, placing a constrait so that this service does not deploy on the
amd server as the uid/gid is different there.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   mongodb:
     container_name: maplelegends_vote_reminder-mongodb
-    user: "gordonpn"
+    user: "1001:1001"
     volumes:
       - /mnt/share/docker/maplelegends_vote_reminder/mongodb:/data
       - /mnt/share/docker/maplelegends_vote_reminder/workspace/docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
@@ -28,6 +28,7 @@ services:
       placement:
         constraints:
           - node.labels.persistence == true
+          - node.labels.name != dev
 
   proxy:
     container_name: maplelegends_vote_reminder-proxy_server
