--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
     container_name: maplelegends_vote_reminder-mongodb
     user: "1001:1001"
     volumes:
-      - /mnt/share/docker/maplelegends_vote_reminder/mongodb:/data
+      - /mnt/share/docker/maplelegends_vote_reminder/mongodb:/data/db
       - /mnt/share/docker/maplelegends_vote_reminder/workspace/docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     networks:
       - maplelegends_vote_reminder
